WeatherAQIPage: fix indefinite loading if forecast is n/a

--- a/SimpleWeather.Windows/Main/WeatherAQIPage.xaml
+++ b/SimpleWeather.Windows/Main/WeatherAQIPage.xaml
@@ -115,7 +115,7 @@
             Grid.RowSpan="2"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            IsActive="{Binding ElementName=AQIContainer, Path='ItemsSource.Count', Converter={StaticResource valueBooleanConverter}, ConverterParameter='True', Mode=OneWay, FallbackValue=True, TargetNullValue=True}"
+            IsActive="True"
             IsIndeterminate="True" />
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
