--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Units.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Units.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:segmentControl="clr-namespace:Plugin.Maui.SegmentedControl;assembly=Plugin.Maui.SegmentedControl"
     Title="{x:Static res_strings:Resources.pref_title_units}"
     main:AppShell.AppBarIsVisible="True"
     BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
@@ -28,27 +29,27 @@
                     Padding="0,5"
                     FontSize="Header"
                     Text="{x:Static res_strings:Resources.label_temperature}" />
-                <HorizontalStackLayout x:Name="TemperatureUnits" />
+                <segmentControl:SegmentedControl x:Name="TemperatureUnits" />
                 <Label
                     Padding="0,5"
                     FontSize="Header"
                     Text="{x:Static res_strings:Resources.label_speed}" />
-                <HorizontalStackLayout x:Name="SpeedUnits" />
+                <segmentControl:SegmentedControl x:Name="SpeedUnits" />
                 <Label
                     Padding="0,5"
                     FontSize="Header"
                     Text="{x:Static res_strings:Resources.label_distance}" />
-                <HorizontalStackLayout x:Name="DistanceUnits" />
+                <segmentControl:SegmentedControl x:Name="DistanceUnits" />
                 <Label
                     Padding="0,5"
                     FontSize="Header"
                     Text="{x:Static res_strings:Resources.label_precipitation}" />
-                <HorizontalStackLayout x:Name="PrecipitationUnits" />
+                <segmentControl:SegmentedControl x:Name="PrecipitationUnits" />
                 <Label
                     Padding="0,5"
                     FontSize="Header"
                     Text="{x:Static res_strings:Resources.label_pressure}" />
-                <HorizontalStackLayout x:Name="PressureUnits" />
+                <segmentControl:SegmentedControl x:Name="PressureUnits" />
                 <Rectangle Style="{DynamicResource SettingsDividerStyle}" />
                 <VerticalStackLayout Margin="0,8,0,0">
                     <Label
